21.4 [general] - add pnpm lock - minor fixes
[changelog]
- fix live commit showing out of order
- fix oneline commits not showing as titles
- manually build changelog before deploy
- fix missing commits

[projects]
- fix minor styling issues

--- a/src/static/css/global.sass
+++ b/src/static/css/global.sass
@@ -202,6 +202,7 @@ img
     &.quiz
         display: flex
         margin: 1em 0
+        align-items: center
 
         *
             margin: 0 0.5em
